form added to calculate donuts; responsive text and images

--- a/donut-party.html
+++ b/donut-party.html
@@ -6,6 +6,20 @@
   <script src="donut-party.js"></script>
 </head>
 <body>
-  <p></p>
+  <h1>A Handy Donut Calculator</h1>
+
+  <form id="count" method="POST" action="#">
+      <h5>How many people are there?</h5>
+    <input id="people" type="text">
+
+      <h5>How many donuts do you have?</h5>
+    <input id="donuts" type="text">
+    <br><br>
+    <input id="submit" type="submit" value="Are there enough donuts?">
+  </form>
+  <div id="return">
+    <h2></h2>
+    
+  </div>
 </body>
 </html>
